--- a/spin/Dockerfile
+++ b/spin/Dockerfile
@@ -1,4 +1,6 @@
 FROM gcr.io/spinnaker-marketplace/halyard:1.32.0
 MAINTAINER yxf788@gmail.com
-RUN hal version list \
-    && hal version bom  1.24.1 -q -o yaml >  1.24.1.yml
+RUN hal -v \
+    && sleep 60 \
+    && hal version list \
+    && hal version bom 1.24.1 -q -o yaml >  1.24.1.yml
