--- a/spin/Dockerfile
+++ b/spin/Dockerfile
@@ -1,4 +1,8 @@
 FROM gcr.io/spinnaker-marketplace/halyard:1.32.0
 MAINTAINER yxf788@gmail.com
-RUN sleep 10 \
-    && ps -ef  
+RUN nohup /opt/halyard/bin/halyard >> /tmp/spin.log
+RUN sleep 50 \ 
+    && hal -v \ 
+    && hal version list \
+    && hal version bom 1.24.1 -q -o yaml >  1.24.1.yml
+
