--- a/spin/Dockerfile
+++ b/spin/Dockerfile
@@ -2,7 +2,7 @@ FROM jdehx5qv.mirror.aliyuncs.com/library/ubuntu:18.04
 MAINTAINER yxf788@gmail.com
 ADD InstallHalyard.sh /
 RUN chmod +x /InstallHalyard.sh \
-    && sudo bash InstallHalyard.sh --user runner -y \
+    && bash InstallHalyard.sh --user runner -y \
 	&& sleep 5 \
 	&& hal -v 
 RUN hal version list \
