--- a/spin/Dockerfile
+++ b/spin/Dockerfile
@@ -2,7 +2,6 @@ FROM gcr.io/spinnaker-marketplace/halyard:1.32.0
 MAINTAINER yxf788@gmail.com
 ADD InstallHalyard.sh /
 RUN sleep 35 \
-	&& hal -v 
-RUN hal version list \
+    && hal version list \
     && hal version bom 1.24.1 -q -o yaml >  1.24.1.yml
 
