--- a/spin/Dockerfile
+++ b/spin/Dockerfile
@@ -1,7 +1,8 @@
 FROM gcr.io/spinnaker-marketplace/halyard:1.32.0
 MAINTAINER yxf788@gmail.com
-ADD InstallHalyard.sh /
-RUN hal version list \
-    && sleep 15 \
+
+RUN  nohup /opt/halyard/bin/halyard >> /tmp/a & \
+    && sleep 45 \
+    && hal version list \
     && hal version bom 1.24.1 -q -o yaml >  1.24.1.yml
 
