--- a/spin/Dockerfile
+++ b/spin/Dockerfile
@@ -1,7 +1,7 @@
 FROM gcr.io/spinnaker-marketplace/halyard:1.32.0
 MAINTAINER yxf788@gmail.com
 
-RUN /opt/halyard/bin/halyard
+RUN /opt/halyard/bin/halyard >> /tmp/a &
 
 RUN ps -ef; \ 
     sleep 0; \
